--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -29,8 +29,7 @@ header {
     
     .container {
                 @media @breakpointMobile {
-                max-width: 90vw;
-                width: 100%;
+                width: 600px;
                 display: block;
                 align-items: center;
                 padding: 14px;
