--- a/styles/main.css
+++ b/styles/main.css
@@ -32,6 +32,11 @@ body {
   margin-right: 80px;
   margin-left: 80px;
 }
+@media (max-width: 767px) {
+  .container-content {
+    width: 430px;
+  }
+}
 header .container {
   display: flex;
   padding: 24px;
@@ -43,12 +48,11 @@ header .container {
 }
 @media (max-width: 767px) {
   header .container {
-    width: 600px;
+    width: 430px;
     display: block;
+    justify-content: center;
     align-items: center;
-    padding: 14px;
-    padding-left: 55px;
-    margin: 0;
+    margin: 0 auto;
   }
 }
 header .container .pfp {
@@ -65,9 +69,9 @@ header .container h1 {
 }
 @media (max-width: 767px) {
   header .container h1 {
-    margin: 0 auto;
+    margin: 0 auto 0 auto;
     display: block;
-    margin-left: -20px;
+    margin-left: 5px;
   }
 }
 header .container img {
@@ -81,7 +85,7 @@ header .container ul {
 @media (max-width: 767px) {
   header .container ul {
     display: flex;
-    margin-left: -20px;
+    margin-left: 0px;
   }
 }
 header .container ul li {
