--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -20,11 +20,13 @@ body {
 }
 
 .container-content {
-    margin-right: 80px;
-    margin-left: 80px;
     @media @breakpointMobile {
         width: 430px;
+        margin: 0;
         }
+    margin-right: 80px;
+    margin-left: 80px;
+
 }
 
 
