--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -31,7 +31,7 @@ body {
 
 .container-content {
     @media @breakpointMobile {
-        width: 430px;
+        width: 100vw;
         margin: 0;
         }
     margin-right: 80px;
