--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -44,7 +44,7 @@ header {
     
     .container {
                 @media @breakpointMobile {
-                width: 430px;
+                width: 100vw;
                 display: block;
                 justify-content: center;
                 align-items: center;
