--- a/styles/main.css
+++ b/styles/main.css
@@ -59,7 +59,7 @@ header .container {
 }
 @media (max-width: 767px) {
   header .container {
-    width: 430px;
+    width: 100vw;
     display: block;
     justify-content: center;
     align-items: center;
