--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -121,8 +121,29 @@ header {
     }
 }
 
+.sobre-mim-mobile {
+    width: 100vw;
+    margin: 0 auto;
+
+    .container-info {
+        max-width: 100vw;
+        margin-left: 25px;
+
+        img {
+            height: 200px;
+            margin: 0 auto 0 auto;
+        }
+    }
+}
+
 .sobre-mim {
     margin-bottom: 48px;
+
+    .flex {
+        @media @breakpointMobile {
+            display: none;
+        }
+    }
 
     .container-info {
         width: 100%;
