--- a/styles/main.css
+++ b/styles/main.css
@@ -128,8 +128,25 @@ header .container ul li a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.sobre-mim-mobile {
+  width: 100vw;
+  margin: 0 auto;
+}
+.sobre-mim-mobile .container-info {
+  max-width: 100vw;
+  margin-left: 25px;
+}
+.sobre-mim-mobile .container-info img {
+  height: 200px;
+  margin: 0 auto 0 auto;
+}
 .sobre-mim {
   margin-bottom: 48px;
+}
+@media (max-width: 767px) {
+  .sobre-mim .flex {
+    display: none;
+  }
 }
 .sobre-mim .container-info {
   width: 100%;
