--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -122,19 +122,24 @@ header {
 }
 
 .sobre-mim-mobile {
-    width: 100vw;
-    margin: 0 auto;
-
-    .container-info {
-        max-width: 100vw;
-        margin-left: 25px;
-
-        img {
-            height: 200px;
-            margin: 0 auto 0 auto;
+    @media @breakpointMobile {
+        display: contents;
+        width: 100vw;
+        margin: 0 auto;
+    
+        .container-info {
+            max-width: 100vw;
+            margin-left: 25px;
+    
+            img {
+                height: 200px;
+                margin: 0 auto 0 auto;
+            }
         }
     }
+    display: none;
 }
+
 
 .sobre-mim {
     margin-bottom: 48px;
