--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -130,6 +130,10 @@ header {
         .container-info {
             max-width: 100vw;
             margin-left: 25px;
+
+            p {
+                margin-right: 6px;
+            }
     
             img {
                 height: 200px;
