--- a/styles/main.css
+++ b/styles/main.css
@@ -141,6 +141,9 @@ header .container ul li a:hover {
     max-width: 100vw;
     margin-left: 25px;
   }
+  .sobre-mim-mobile .container-info p {
+    margin-right: 20px;
+  }
   .sobre-mim-mobile .container-info img {
     height: 200px;
     margin: 0 auto 0 auto;
