--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -133,6 +133,7 @@ header {
 
             p {
                 margin-right: 20px;
+                text-align: justify;
             }
     
             img {
